# pyvr

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  refactor_plan.md  v0.2.2_plan.md
docs/plans/: roadmap.md  v0.3.2-interface-relayout-design.md  v0.3.2-interface-relayout-phase-01.md  v0.3.2-interface-relayout-phase-02.md  v0.3.2-interface-relayout-phase-03.md  v0.3.3-ray-marching-consistency-design.md  v0.3.3-ray-marching-consistency-phase-01.md  vtk_loader-design.md  (+14 more)
example/: benchmark.py  transfer_functions_demo.py
examples/: basic_rendering.py  benchmark.py  camera_demo.py  vtk_loading_demo.py
moderngl_renderer/: datasets.py  transfer_functions.py  volume_renderer.py
plan/: README.md  REFACTORING_SUMMARY.md  original_camera_plan.md  phase1_camera_v0.2.3.md  phase2_light_v0.2.4.md  phase3_volume_v0.2.5.md  phase4_renderconfig_v0.2.6.md  phase5_remove_abstract_base_v0.2.7.md
pyvr/: __init__.py  config.py
tests/: README.md  test_config.py  test_config_opacity_correction.py  visual_comparison_opacity_correction.py
torch_renderer/: camera.py  requirements.txt  volume_renderer.py
version_notes/: 0.2.0.major_refactoring.md  0.2.1.clean_up.md  0.2.2.combined_texture_and_test_coverage.md  0.2.3.camera_refactoring.md  0.2.4.light_refactoring.md  0.2.5.volume_renderer_refactoring.md  0.2.6.renderconfig.md  0.2.7.remove_abstract_base.md  0.3.0.interactive_interface.md  v0.3.1_interface_refinements.md  v0.3.2_interface_relayout.md  v0.3.3_ray_marching_consistency.md  v0.3.4_examples_rework.md  v0.4.0_vtk_loader.md  v0.4.1_trackball_control.md
(+115 files in other folders)
